<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constReport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWithe"
    tools:context=".control.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnVolverReg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/row_return" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/reportar"
            android:textColor="@color/colorWithe"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btnCalendar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/calendar" />

        <ImageButton
            android:id="@+id/btnPicel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/lapiz" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/logo_cam" />

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/Titulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto" />

    <ImageButton
        android:id="@+id/btnMicro"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWithe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitulo"
        app:srcCompat="@drawable/micro" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorAccent"
        android:text="@string/guardar"
        android:textColor="@color/colorWithe"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnStop"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorWithe"
        app:layout_constraintBottom_toBottomOf="@+id/btnMicro"
        app:layout_constraintStart_toEndOf="@+id/btnMicro"
        app:layout_constraintTop_toTopOf="@+id/btnMicro"
        app:srcCompat="@drawable/logo_stop" />

</androidx.constraintlayout.widget.ConstraintLayout>